<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@drawable/bottom_line_light"
        android:gravity="center_vertical"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:text="@string/request_book"
        android:textAllCaps="true"
        android:textColor="@android:color/background_dark"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/tvBookName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/app_title"
            android:textAllCaps="true"
            android:textColor="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvIssueStartDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start|center"
                android:text="@string/issue_start_date"
                android:textAllCaps="true"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tvIssueEndDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end|center"
                android:text="@string/issue_end_date"
                android:textAllCaps="true"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>

        <Button
            android:id="@+id/btnRequestBookConfirm"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_background_primary"
            android:contentDescription="@string/login"
            android:gravity="center"
            android:text="@string/request_book"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="17sp" />
    </LinearLayout>
</LinearLayout>