<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="in.semicolonindia.studentcrm.SplashActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:src="@drawable/bg_sketch" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_title"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="29sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <in.semicolonindia.studentcrm.widgets.AVLoadingIndicatorViewLight
                android:id="@+id/loadingIndicator"
                style="@style/AVLoadingIndicatorView"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginTop="64dp" />

            <TextView
                android:id="@+id/tvProgressTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/loading"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/powered_by"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvDevCompanyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/dev_company_name"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="19sp" />

        <in.semicolonindia.studentcrm.civ.CircleImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/dev_company"
            android:padding="2dp"
            android:src="@drawable/semicolon" />
    </LinearLayout>
</RelativeLayout>
