<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="4dp"
    android:background="@drawable/dialog_background"
    android:orientation="vertical"
    tools:context="in.semicolonindia.studentcrm.StudentActivities.LeaderBoardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <in.semicolonindia.studentcrm.civ.CircleImageView
                android:id="@+id/img_Kid"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/bg_sketch" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_Name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/name"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorTextSecondary"/>

                    <TextView
                        android:id="@+id/tv_Date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|end"
                        android:text="@string/date"
                        android:textSize="15sp"
                        android:textColor="@color/colorTextSecondary"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvClass"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:text="@string/class1"
                        android:textSize="14sp"
                        android:textColor="@color/colorTextSecondary"/>

                    <TextView
                        android:id="@+id/tvSection"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/section"
                        android:textSize="14sp"
                        android:textColor="@color/colorTextSecondary"/>


                    <TextView
                        android:id="@+id/tvTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:gravity="center|end"
                        android:text="@string/time"
                        android:textSize="14sp"
                        android:textColor="@color/colorTextSecondary"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tvAchivment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@android:color/transparent"
            android:text="@string/achievement"
            android:textColor="@color/colorTextSecondary"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:id="@+id/tvDesp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@android:color/transparent"
            android:text="@string/dummy_multiline_text"
            android:textColor="@color/colorTextSecondary"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>
