<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_line_light">

        <TextView
            android:id="@+id/tvRouteName"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/app_title"
            android:textAllCaps="true"
            android:textColor="@android:color/background_dark"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnRequestTransport"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="8dp"
            android:background="@drawable/button_background_primary"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/request"
            android:textAllCaps="true"
            android:textColor="@android:color/background_light"
            android:textSize="12sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNoOfVehicles"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/subject"
                android:textAllCaps="true"
                android:background="@android:color/transparent"
                android:textColor="@color/colorTextSecondary" />

            <TextView
                android:id="@+id/tvRoutFare"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|end"
                android:text="@string/dummy_Date"
                android:textAllCaps="true"
                android:background="@android:color/transparent"
                android:textColor="@color/colorTextSecondary"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvDesp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            android:background="@android:color/transparent"
            android:maxLines="2"
            android:text="@string/dummy_multiline_text"
            android:textColor="@color/colorTextSecondary" />
    </LinearLayout>
</LinearLayout>