<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_line_light">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:text="@string/app_title"
            android:textAllCaps="true"
            android:textColor="@android:color/background_dark"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnDownload"
            android:layout_width="100dp"
            android:layout_height="26dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="8dp"
            android:background="@drawable/button_background_primary"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:text="@string/download"
            android:textSize="12sp"
            android:textAllCaps="true"
            android:textColor="@android:color/background_light" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="14dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSubject"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/subject"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:background="@android:color/transparent"
                android:textColor="@color/colorTextSecondary"/>

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|end"
                android:text="@string/dummy_Date"
                android:textSize="14sp"
                android:textAllCaps="true"
                android:background="@android:color/transparent"
                android:textColor="@color/colorTextSecondary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

           <!-- <TextView
                android:id="@+id/tvUploader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/dummy_uploader"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:background="@android:color/transparent"
                android:textColor="@color/colorTextSecondary" />-->

            <TextView
                android:id="@+id/tvFile"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/dummy_file"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:background="@android:color/transparent"
                android:textColor="@color/colorTextSecondary" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvDesp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:maxLines="2"
            android:text="@string/dummy_multiline_text"
            android:background="@android:color/transparent"
            android:textColor="@color/colorTextSecondary" />
    </LinearLayout>
</LinearLayout>